# codexTest

./: .gitignore  CMakeLists.txt  Makefile  README.md  klv.cpp  klv.h  main.cpp  st0102.h  st0601.cpp  st0601.h  st0903.cpp  st0903.h  stanag.cpp
core/: klv.cpp  klv.h  klv_bytes.cpp  klv_bytes.h  klv_leaf.cpp  klv_leaf.h  klv_macros.h  klv_node.h  klv_registry.cpp  klv_registry.h  klv_set.cpp  klv_set.h  klv_types.h  st_common.h  stanag.cpp  stanag.h
example/: macro_example.cpp  main.cpp  stanag4609_simple.cpp
st0102/: st0102.cpp  st0102.h
st0601/: st0601.cpp  st0601.h
st0903/: st0903.cpp  st0903.h
tests/: encode_tests.cpp
